# 8inary

./: README.md
img/logo/: logo.txt
infra/: Cargo.toml  run_debug.sh
infra/src/: context.rs  error.rs  main.rs
infra/src/setup/: mod.rs
infra/src/setup/steps/: containerd.rs  control_plane.rs  disable_swap.rs  firewall.rs  helm.rs  identity_database.rs  istio.rs  kernel_modules.rs  kubes.rs  mod.rs  sysctl.rs
infra/src/setup/utils/: kctl.rs  mod.rs  pkg.rs
intergate/: Cargo.toml  bind.sh  build.sh  certs.sh  deploy.sh  intergate.service  run.sh
intergate/src/: main.rs
intergate/templates/: index.html
kubernetes/: Cargo.toml  run_debug.sh
kubernetes/.cargo/: config.toml
kubernetes/src/: agent.rs  context.rs  logging.rs  machines.rs  main.rs
kubernetes/src/setup/: containerd.rs  control_plane.rs  disable_swap.rs  helm.rs  istio.rs  kernel_modules.rs  kubes.rs  machines.rs  mod.rs  pkg.rs  sysctl.rs
mgmt/: setup.sh
