[package]
name = "intergate"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
axum = "0.8.6"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
http = "1.3.1"
rustls-pemfile = "2.2.0"
time = { version = "0.3.44", features = ["macros"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-rustls = "0.26.4"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "time"] }
